Fix issue where bottom of modal was cut off on certain mobile devices.

--- a/src/components/Wizard/Wizard.scss
+++ b/src/components/Wizard/Wizard.scss
@@ -33,18 +33,20 @@
 .c-wizard {
   background-color: rgba(33, 56, 72, 0.8);
   .cds--modal-container {
-    background: rgb(45, 101, 125);
     background: linear-gradient(90deg, #2d657d 0%, #368b70 100%);
+    background: rgb(45, 101, 125);
+    block-size: auto;
     border-radius: g.$border-radius-large;
     box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.35);
     height: auto;
+    inline-size: 84%;
+    max-block-size: 90%;
     padding: 12px;
-    top: 20px;
-    width: 92%;
+    position: static;
 
-    @include do-this-above(md) {
-      max-width: 776px;
-      width: 100%;
+    @include do-this-above(lg) {
+      inline-size: 60%;
+      max-block-size: 84%;
     }
   }
   .cds--modal-header,
@@ -86,12 +88,17 @@
     overflow: hidden;
     padding: 12px;
     position: absolute;
-    right: 10px;
-    top: 6px;
-    transform: scale(1.6);
+    right: 0px;
+    top: 0px;
+    transform: scale(1.25);
     transition: background-color 110ms cubic-bezier(0.2, 0, 0.38, 0.9);
     width: 48px;
     z-index: 2;
+    @include do-this-above(md) {
+      right: 10px;
+      top: 6px;
+      transform: scale(1.6);
+    }
   }
 
   .c-wizard__description {
@@ -131,12 +138,10 @@
   }
 
   .cds--modal-header {
-    background-image: url("bg_checkmark.svg");
-    background-position: bottom left;
-    background-repeat: no-repeat;
-
     @include do-this-above(md) {
-      background-position: 0 0;
+      background-image: url("bg_checkmark.svg");
+      background-position: bottom left;
+      background-repeat: no-repeat;
     }
   }
 
